css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Copy and paste your work from yesterday here and start to refactor into flexbox */

header{
	height: 80px;
	display: flex;
	justify-content: center;
	align-items: center;
}
.top-section{
	display: flex;
	justify-content: space-evenly;
	align-items: center;
	height: 750px;
}
body nav{
    width: 60%;
    display: flex;
}
body nav a{
	color: lightgrey;
    text-decoration: none;
	font-size: 23.8px;
    width: 100%;
}
body nav a:hover{
    color: black;
    -webkit-stroke-width: 5.3px;
    text-shadow: 1px 0px 20px black;
}
h1{
    font-size: 100px;
	text-align: center;
}
#button{
    display: block;
    text-decoration: none;
    color: black;
	height: 40px;
	width: 200px;
    font-size: 23.8px;
    text-align: center;
    line-height: normal;
	border: 1px solid black;
	align-self: center;
}
#button:hover{
    color: black;
    background: radial-gradient(white 0%, silver 60%, black 100%);
}
.enter{
    display: flex;
    height: 375px;
    flex-direction: column;
    justify-content: center;

}
.circle{
	width: 33%;
	vertical-align: middle;
}
 .middle-section{
    height: 725px;
    width: 80%;
    margin: 0 auto;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
}
 .section1{
	 display: flex;
}
 .feat{
    margin-top: 1vw;
    font-size: 23.8px;
    padding: 1vw;
    word-wrap: break-word;
    vertical-align: middle;
}
 .abo{
    margin-top: 1vw;
    display: inline-block;
    font-size: 23.8px;
    padding: 1vw;
    word-wrap: break-word;
    vertical-align: middle;
}
.section3{
	display: flex;
}
.serve{
    word-wrap: break-word;
    padding: 1vw;
    font-size: 23.8px;
}
.prod{
    word-wrap: break-word;
    padding: 1vw;
    font-size: 23.8px;
}
.vis{
    word-wrap: break-word;
    padding: 1vw;
    font-size: 23.8px;
}
.middle-img{
    margin-top: 20px;
    width: 100%;
    height: 250px;
    margin-bottom: 20px;
}
.bottom-section{
    height: 200px;
    width: 80%;
    margin: 30px auto;
    font-size: 23.8px;
    padding: 1vw;
}
.space{
    line-height: 300%;
}

footer{
    text-align: center;
    font-size: 23.8px;
}
@media(max-width:1200px){
    .middle-section{
        height: 800px; 
    }
}
@media(max-width: 1100px){
    .middle-section{
        height: 845px;
    }
}
@media(max-width:990px){
    .middle-section{
        height:875px;
    }
}
@media(max-width: 875px){
    .middle-section{
        height:925px;
    }
}

@media(max-width: 800px){
    .circle{
        display: none;
    }
    .logo{
        height: 30px;
    }    
    header{
        flex-direction: column-reverse;
    }
    body nav{
        width: 80%;
        margin-top: 3%;
    }
    body nav a{
        font-size: 16px;
    }
    .top-section{
        height: 400px;
    }
    .enter{
        justify-content: center;
    }
    h1{
        font-size: 75px;
    }
    .middle-section{
        height: 425px;
    }
    .feat{
        font-size: 13px;
        padding: 15px;
    }
    .abo{
        font-size: 13px;
        padding: 15px;
    }
    .middle-img{
        height: 100px;
        margin-top: 5px;
        margin-bottom: 5px;
    }
    .serve{
        font-size: 13px;
        padding: 20px;
    }
    .prod{
        font-size: 13px;
        padding: 20px;
    }
    .vis{
        font-size: 13px;
        padding: 20px;
    }
    .bottom-section{
        font-size: 13px;
        margin: 20px auto;
        height: 125px;
    }
    footer{
        font-size: 13px;
    }
}
@media(max-width: 700px){
    .middle-section{
        height: 450px;
    }
}
@media(max-width: 625px){
    .middle-section{
        height: 500px;
    }
}
@media(max-width: 575px){
    .middle-section{
        height: 550px;
}
@media(max-width: 500px){
    header{
        height: 230px;
        flex-direction: column-reverse;
    }
    .logo{
        height: 25px;
    }
    body nav{
        flex-direction: column;
        text-align: center;
    }
    body nav a{
        height: 30px;
        padding: 1%;
        border-top: 1px solid silver;
        border-bottom: 1px solid silver;
    }
    .top-section{
        height: 375px;
    }
    .middle-section{
        height: 700px;
    }
    .section1{
        flex-direction: column;
    }
    .middle-img{
        height: 100px;
    }
    .section3{
        flex-direction: column;
    }
    .bottom-section{
        height: 100px;
    }
}

